<resources>
    <string name="app_name">SmartPlayer</string>
    <string name="APP_LOGGER">SmartPlayerLogger</string>

    <string name="getting_songs_progress_label">Getting songs...</string>
    <string name="adding_songs_progress_bar_title">Adding Songs</string>


    <string name="search_hint">Search here...</string>
    <string name="search_label">Search</string>
    <string name="header_default_text">Header</string>
    <string name="search_item_default">Item Name</string>
    <string name="search_add_info_default">Additional Info</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="SONG_TITLE">Song Title</string>
    <string name="ARTIST_NAME">Artist Name</string>
    <string name="ALBUM_NAME">Album Name</string>

    <!-- Library -->
    <string name="LIBRARY">Library</string>

    <!-- Now Playing -->
    <string name="NOW_PLAYING">Now Playing</string>
    <string name="duration_default">0:00</string>
    <string name="select_song_default">Select A Song</string>

    <!-- Playlists -->
    <string name="PLAYLISTS">Playlists</string>

    <!-- Settings -->
    <string name="SETTINGS">Settings</string>

    <!--AlbumActivity-->
    <string name="album_number_default">1</string>
    <string name="num_songs">%1$d song(s)</string>

    <!-- Song Info -->
    <!-- Tags -->
    <string name="ALBUM_TAG">Album: </string>
    <string name="YEAR_TAG">Year: </string>
    <string name="TRACK_TAG">Track: </string>
    <string name="GENRE_TAG">Genre: </string>
    <string name="DURATION_TAG">Duration: </string>
    <string name="PLAYS_TAG">Number of Plays: </string>


    <!--Transition Strings-->
    <string name="song_title_transition_name">song_title</string>
    <string name="artist_name_transition_name">artist_name</string>
    <string name="album_art_transition_name">album_art</string>
    <string name="play_button_transition_name">play_button</string>
    <string name="album_name_transition_name">album_name</string>
    <string name="album_container_transition_name">container</string>

    <string name="pager_title_songs">Songs</string>
    <string name="pager_title_albums">Albums</string>
    <string name="pager_title_artists">Artists</string>


    <!--Animated Vector Strings-->
    <string name="path_play">M16,24L38,24L27.3,30.8L16,38ZM16,10L27.3,17.2L38,24L16,24Z</string>
    <string name="path_stop">M6,6h12v12H6z</string>
    <string name="path_pause">M12,10L20,10L20,38L12,38ZM28,10L36,10L36,38L28,38Z</string>

    <string name="path_play_vector">M8,5L19,12L19,12L8,19z</string>
    <string name="path_stop_vector">M6,6L18,6L18,18L6,18z</string>


    <!--Activity Tags-->
    <string name="LIBRARY_TAG">library_tag</string>
    <string name="NOW_PLAYING_TAG">now_playing_tag</string>
    <string name="PLAYLISTS_TAG">playlists_tag</string>
    <string name="SETTINGS_TAG">settings_tag</string>
    <string name="SEARCH_TAG">search_tag</string>
    <string name="ABOUT_TAG">about_tag</string>


    <!--Font Directory-->
    <string name="raleway_regular_font">fonts/Raleway-Regular.ttf</string>
    <string name="high_tea_font">fonts/highTea.otf</string>


    <!--Intent Extras-->
    <string name="EXTRA_ALBUM_NAME">EXTRA_ALBUM_NAME</string>
    <string name="EXTRA_ALBUM_ARTIST">EXTRA_ALBUM_ARTIST</string>
    <string name="EXTRA_ALBUM_ART">EXTRA_ALBUM_ART</string>
    <string name="EXTRA_ALBUM_SONGLIST">EXTRA_ALBUM_SONGLIST</string>
    <string name="EXTRA_SENDER">EXTRA_SENDER</string>
    <string name="EXTRA_ALBUM_UID">EXTRA_ALBUM_UID</string>

    <!--Content Descriptions-->
    <string name="Options_CD">Options</string>
    <string name="Album_CD">Album</string>
    <string name="Previous_CD">Play previous song</string>
    <string name="Next_CD">Play next song</string>
    <string name="Shuffle_CD">Toggle shuffle</string>
    <string name="Play_CD">Play/Pause</string>
    <string name="Favorite_CD">Toggle Favorite</string>

</resources>
