<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="165dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    android:layout_height="220dp"
    android:layout_weight="1"
    android:translationZ="10dp"
    android:layout_marginStart="10dp"
    android:transitionName="@string/album_container_transition_name">

    <android.support.v7.widget.CardView
        android:id="@+id/tile_album_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        android:transitionName="@string/album_art_transition_name">

        <ImageView
            android:id="@+id/tile_albumArt"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/temp_album_art"
            android:contentDescription="@string/Album_CD"/>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/list_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_below="@id/tile_album_card"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp">


        <ImageButton
            android:id="@+id/list_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="3dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:tint="@android:color/white"
            android:visibility="gone"
            android:contentDescription="@string/Options_CD"/>


        <LinearLayout
            android:id="@+id/list_songInfo"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tile_album_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/SONG_TITLE"
                android:textColor="@color/header_color"
                android:textSize="13sp"
                android:transitionName="@string/album_name_transition_name"
                android:gravity="center"
                android:fontFamily="@font/exo_medium"/>

            <TextView
                android:id="@+id/tile_artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/ALBUM_NAME"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/subtitle_color"
                android:fontFamily="@font/comfortaa_light"
                android:transitionName="@string/artist_name_transition_name"/>
        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>