<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:onClick="openNowPlaying"
    android:elevation="5dp"
    android:background="@color/extra_light_midnight_blue"
    >
    <!--android:background="#CC000000"-->

    <android.support.v7.widget.CardView
        android:id="@+id/album_cover_card"
        android:layout_gravity="center_horizontal"
        app:cardElevation="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">

        <ImageView
            android:id="@+id/image_album_art"
            android:background="@drawable/temp_album_art"
            android:scaleType="fitCenter"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/Album_CD"
            android:transitionName="@string/album_art_transition_name"
            />
    </android.support.v7.widget.CardView>



    <RelativeLayout
        android:id="@+id/small_button_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        >

        <!--<android.support.design.widget.FloatingActionButton-->
            <!--app:fabCustomSize="50dp"-->
            <!--app:elevation="3dp"-->
            <!--android:id="@+id/now_playing_small_play_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/small_play_button"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_margin="0dp"-->
            <!--android:onClick="onMediaButtonPress"-->
            <!--android:transitionName="@string/play_button_transition_name"/>-->

        <be.rijckaert.tim.animatedvector.FloatingMusicActionButton
            app:fabCustomSize="50dp"
            app:elevation="3dp"
            android:id="@+id/now_playing_small_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/pastel_rose"
            android:layout_gravity="center"
            app:mode="playToPause"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:onClick="onPlayBtnClick"
            android:transitionName="@string/play_button_transition_name"/>

        <!--<ImageView-->
            <!--android:id="@+id/now_playing_small_play_button"-->
            <!--android:layout_width="50sp"-->
            <!--android:layout_height="50sp"-->
            <!--android:src="@drawable/small_play_button"-->
            <!--android:tint="@color/pastel_rose"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_margin="0dp"-->
            <!--android:onClick="onMediaButtonPress"-->
            <!--android:transitionName="@string/play_button_transition_name"-->
            <!--/>-->




    </RelativeLayout>

    <LinearLayout
        android:id="@+id/song_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/album_cover_card"
        android:layout_toStartOf="@id/small_button_items"
        android:layout_alignTop="@id/album_cover_card"
        android:layout_alignBottom="@id/album_cover_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_black"
            android:text="@string/NOW_PLAYING"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

        <TextView
            style="@style/SPHeading"
            android:id="@+id/now_playing_small_songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SONG_TITLE"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:transitionName="@string/song_title_transition_name"/>

        <TextView
            style="@style/SPSubtext"
            android:id="@+id/now_playing_small_artistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ARTIST_NAME"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:maxLines="1"
            android:textColor="@color/subtitle_color"
            android:transitionName="@string/artist_name_transition_name"/>

    </LinearLayout>

</RelativeLayout>