<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/album_maincontent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/album_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/NoActionBar"
        android:fitsSystemWindows="true"
        android:transitionName="@string/album_container_transition_name">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/album_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="15dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginBottom="20dp"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="@string/album_art_transition_name">

                <ImageView
                    android:id="@+id/album_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/temp_album_art"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/Album_CD"/>

            </android.support.v7.widget.CardView>




            <android.support.v7.widget.Toolbar
                android:id="@+id/album_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            app:layout_collapseMode="parallax"
            android:padding="8dp"
            android:elevation="5dp">
            <ImageView
                android:id="@+id/album_gmailitem_letter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:transitionName="@string/album_art_transition_name"
                tools:ignore="ContentDescription"/>
            <TextView
                style="@style/SPHeading"
                android:id="@+id/album_artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ARTIST_NAME"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:layout_toEndOf="@id/album_gmailitem_letter"
                android:transitionName="@string/artist_name_transition_name"
                />
            <TextView
                style="@style/SPSubtext"
                android:id="@+id/album_song_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_songs"
                android:layout_below="@id/album_artist_name"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/album_gmailitem_letter" />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/recycler_view_layout"
                android:id="@+id/includedRecyclerViewLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </RelativeLayout>
        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/album_recyclerview"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" >-->

        <!--</android.support.v7.widget.RecyclerView>-->
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_shuffle_black_24dp"
        app:layout_anchor="@id/album_app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:elevation="10dp"
        />

</android.support.design.widget.CoordinatorLayout>